Bug 64874 - [bug] weston-launch will not launch
Summary: [bug] weston-launch will not launch
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-22 16:12 UTC by Brian Lovin
Modified: 2013-06-03 13:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Brian Lovin 2013-05-22 16:12:40 UTC
System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
wayland (master) heads/master-0-g508dd69
fontconfig (master) 2.10.93-0-g8d54091
drm (master) heads/master-0-g8a88e34
mesa (master) heads/master-0-gff68f61
libxkbcommon (master) heads/master-0-ga392d26
pixman (master) heads/master-0-g2320f05
cairo (master) heads/master-0-g631bf29
weston (master) heads/master-0-gfe097f9
harfbuzz (master) heads/master-0-g6015263
glib (master) heads/master-0-gc9cc0be
atk (master) heads/master-0-gc71edfa
efl (master) heads/master-0-g3c618e5
elementary (master) heads/master-0-gc5c04e3
wfits (master) heads/master-0-g4377115

Detailed Description:
-----------------------------
Launching weston-launch simply results in the following error:
$ weston-launch
weston-launch: exec failed: Bad address

Steps to Reproduce:
----------------------------
1. Launch weston-launch
2. Observe error message


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.